# theron

./: INSTALL.md  LICENSE  README.md  pyproject.toml
examples/vulnerable_repo/: SKILL.md  app.py  mcp.json  package.json  requirements.txt  tools.py
rules/agentic/v1/: agent_permissions.yaml  hidden_injections.yaml  mcp_config.yaml  skill_injection.yaml  tool_poisoning.yaml
rules/ai/v1/: data_exfiltration.yaml  insecure_deployment.yaml  prompt_injection.yaml  secret_exposure.yaml
rules/sast/v1/: ai_taint.yaml  javascript.yaml  python.yaml
rules/sca/v1/: risky_packages.yaml
scanner/: __init__.py  cli.py  engine.py  github_client.py  models.py  profiler.py  rule_loader.py
scanner/plugins/: __init__.py  agentic.py  ai_security.py  base.py  sast.py  sca.py
scanner/reporters/: __init__.py  html.py  json_reporter.py  sarif.py  terminal.py
scanner/utils/: __init__.py  helpers.py
tests/: __init__.py  test_scanner.py
