[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sec-scanner"
version = "0.1.0"
description = "Open-source AI infrastructure security scanner with GitHub integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Aryaman Futane"}]
keywords = ["security", "ai", "llm", "sast", "sca", "sbom", "mcp", "agentic", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ai-sec-scan = "scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]

[tool.setuptools.package-data]
scanner = ["../rules/**/*.yaml"]
